--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,19 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "@google-ai/generativelanguage": "^2.6.0",
     "@google/generative-ai": "^0.16.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
+    "openai": "^4.53.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-d3-speedometer": "^2.2.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
